--- a/src/views/watchMovie/watchMovie.scss
+++ b/src/views/watchMovie/watchMovie.scss
@@ -1,34 +1,34 @@
 @import "base";
 
 .watchMovie-wp {
+  position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 50px;
-  background: #00ccff;
-  color: #fff;
-  vertical-align: middle;
-  text-align: center;
+  background-color: #1e100b;
 
-  a {
-    display: inline-block;
-    width: 50%;
-    padding: 12px 10px;
-    margin: 20px auto;
-    border: 1px solid #fff;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-  }
-
-  .no-letter {
-    z-index: 99;
-    position: absolute;
-    left: 0;
-    top: 0;
+  .watchMovie-cont {
+    position: relative;
     width: 100%;
     height: 100%;
-    padding-top: 20px;
-    color: #fff;
-    background-color: rgba($color: #000000, $alpha: 0.8);
+    text-align: center;
+  }
+
+  .logo-img {
+    width: (144 / 75) * 1rem;
+    margin-top: (40 /75) * 1rem;
+    vertical-align: middle;
+    outline: none;
+    overflow: hidden;
+  }
+
+  .watchMovie-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: (750 / 75) * 1rem;
+    height: (206 / 75) * 1rem;
+    background: url("../../assets/images/movie_m.png") no-repeat;
+    background-size: contain;
+    background-position: top center;
   }
 }
