--- a/src/views/watchMovie/watchMovie.scss
+++ b/src/views/watchMovie/watchMovie.scss
@@ -21,6 +21,58 @@
     overflow: hidden;
   }
 
+  .watchMovie-main {
+    position: relative;
+  }
+
+  .letter-info {
+    position: relative;
+    width: (600 / 75) * 1rem;
+    height: (700 / 75) * 1rem;
+    margin: ((38 /75) * 1rem) auto 0;
+    background-color: #fff;
+    overflow: hidden;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: (60/ 75) * 1rem;
+    height: (85 / 75) * 1rem;
+    background-size: (60/ 75) * 1rem (85 / 75) * 1rem;
+    outline: none;
+    text-decoration: none;
+  }
+
+  .swiper-button-prev {
+    background-image: url("../../assets/images/l_arrow.png");
+    left: 0;
+  }
+
+  .swiper-button-next {
+    background-image: url("../../assets/images/r_arrow.png");
+    right: 0;
+  }
+
+  .watchMovie-btns {
+    position: relative;
+    width: (553 / 75) * 1rem;
+    height: (86 / 75) * 1rem;
+    margin: (48 / 75) * 1rem auto 0;
+    background: url("../../assets/images/watchMovie_btns.png") no-repeat;
+    background-size: contain;
+    background-position: top center;
+    text-align: left;
+
+    .watchMovie-btn-link {
+      display: inline-block;
+      float: left;
+      width: 50%;
+      height: (86 / 75) * 1rem;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+
   .watchMovie-bottom {
     position: absolute;
     left: 0;
