--- a/src/views/myLoveLetter/myLoveLetter.scss
+++ b/src/views/myLoveLetter/myLoveLetter.scss
@@ -1,34 +1,146 @@
 @import "base";
 
 .myLoveLetter-wp {
+  position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 50px;
-  background: #00ccff;
-  color: #fff;
-  vertical-align: middle;
-  text-align: center;
+  background-color: #1e100b;
 
-  a {
-    display: inline-block;
-    width: 50%;
-    padding: 12px 10px;
-    margin: 20px auto;
-    border: 1px solid #fff;
-    color: #fff;
+  .myLoveLetter-cont {
+    position: relative;
+    width: 100%;
+    height: 100%;
     text-align: center;
-    border-radius: 6px;
   }
 
-  .no-letter {
-    z-index: 99;
+  .logo-img {
+    width: (144 / 75) * 1rem;
+    margin-top: (40 /75) * 1rem;
+    vertical-align: middle;
+    outline: none;
+    overflow: hidden;
+  }
+
+  .myLoveLetter-main {
+    position: relative;
+  }
+
+  .letter-info {
+    position: relative;
+    width: (600 / 75) * 1rem;
+    height: (700 / 75) * 1rem;
+    padding-top: (70 / 75) * 1rem;
+    margin: ((38 /75) * 1rem) auto 0;
+    background-color: #fff;
+    //overflow: hidden;
+  }
+
+  .letter-total {
+    margin-top: (40/ 75) * 1rem;
+    font-size: (25 / 75) * 1rem;
+    font-weight: bold;
+    color: #fff;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: (60/ 75) * 1rem;
+    height: (85 / 75) * 1rem;
+    background-size: (60/ 75) * 1rem (85 / 75) * 1rem;
+    outline: none;
+    text-decoration: none;
+  }
+
+  .swiper-button-prev {
+    background-image: url("../../assets/images/l_arrow.png");
+    left: 0;
+  }
+
+  .swiper-button-next {
+    background-image: url("../../assets/images/r_arrow.png");
+    right: 0;
+  }
+
+  .myLoveLetter-btns {
+    position: relative;
+    width: (553 / 75) * 1rem;
+    height: (86 / 75) * 1rem;
+    margin: (48 / 75) * 1rem auto 0;
+    background: url("../../assets/images/watchMovie_btns.png") no-repeat;
+    background-size: contain;
+    background-position: top center;
+    text-align: left;
+
+    .myLoveLetter-btn-link {
+      display: inline-block;
+      float: left;
+      width: 50%;
+      height: (86 / 75) * 1rem;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+
+  .wm {
+    position: relative;
+    padding-left: (70 / 75) * 1rem;
+    font-size: (25 / 75) * 1rem;
+    font-weight: 500;
+    color: #0f0503;
+    text-align: left;
+  }
+
+  .letter-m-img {
+    position: relative;
+    height: (490 / 75) *1rem;
+    overflow: hidden;
+  }
+
+  .u-info {
+    position: relative;
+    padding-right: (67 / 75) * 1rem;
+    vertical-align: middle;
+    text-align: right;
+
+    .u-avatar {
+      display: inline-block;
+      width: (70 / 75) * 1rem;
+      height: (70 / 75) * 1rem;
+      vertical-align: middle;
+      border-radius: (70 / 75) * 1rem;
+      overflow: hidden;
+    }
+
+    .u-name {
+      display: inline-block;
+      margin-left: (10 / 75) * 1rem;
+      font-size: (25 / 75) * 1rem;
+      font-weight: bold;
+      color: #0f0503;
+    }
+  }
+
+  .myLoveLetter-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: (750 / 75) * 1rem;
+    height: (206 / 75) * 1rem;
+    background: url("../../assets/images/movie_m.png") no-repeat;
+    background-size: contain;
+    background-position: top center;
+  }
+
+  .keys-wp {
+    z-index: 999;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    padding-top: 20px;
     color: #fff;
-    background-color: rgba($color: #000000, $alpha: 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+    vertical-align: middle;
   }
 }
