--- a/src/views/watchMovie/watchMovie.scss
+++ b/src/views/watchMovie/watchMovie.scss
@@ -73,6 +73,45 @@
     }
   }
 
+  .wm {
+    position: absolute;
+    left: 0;
+    top: (70 / 75) * 1rem;
+    width: 100%;
+    padding-left: (70 / 75) * 1rem;
+    font-size: (25 / 75) * 1rem;
+    font-weight: 500;
+    color: #0f0503;
+    text-align: left;
+  }
+
+  .u-info {
+    position: absolute;
+    right: 0;
+    bottom: (40 / 75) * 1rem;
+    width: 100%;
+    padding-right: (67 / 75) * 1rem;
+    vertical-align: middle;
+    text-align: right;
+
+    .u-avatar {
+      display: inline-block;
+      width: (70 / 75) * 1rem;
+      height: (70 / 75) * 1rem;
+      vertical-align: middle;
+      border-radius: (70 / 75) * 1rem;
+      overflow: hidden;
+    }
+
+    .u-name {
+      display: inline-block;
+      margin-left: (10 / 75) * 1rem;
+      font-size: (25 / 75) * 1rem;
+      font-weight: bold;
+      color: #0f0503;
+    }
+  }
+
   .watchMovie-bottom {
     position: absolute;
     left: 0;
