--- a/src/views/borrow/borrow.scss
+++ b/src/views/borrow/borrow.scss
@@ -1,12 +1,12 @@
 @import "base";
 
-.write-wp {
+.borrow-wp {
   position: relative;
   width: 100%;
   height: 100%;
   background-color: #c1c6cc;
 
-  .write-cont {
+  .borrow-cont {
     position: relative;
     width: 100%;
     height: 100%;
@@ -16,38 +16,48 @@
     background-position: top center;
   }
 
-  .write-main {
+  .borrow-main {
     position: relative;
   }
 
-  textarea::-webkit-input-placeholder {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    //padding-top: 25px;
-  }
-
-  .write-info {
+  .borrow-info {
     position: relative;
     width: (600 / 75) * 1rem;
     height: (700 / 75) * 1rem;
+    padding: (70 / 75) * 1rem (65 / 75) * 1rem (60 / 75) * 1rem (70 / 75) * 1rem;
     margin: 0 auto;
+  }
 
-    .write-textarea {
-      display: table-cell;
-      width: (600 / 75) * 1rem;
-      height: (700 / 75) * 1rem;
-      padding: (20 / 75) * 1rem (30 / 75)*1rem;
-      font-size: (30 /75) * 1rem;
-      vertical-align: middle;
-      border: none;
-      background: transparent;
-    }
+  .borrow-total {
+    margin-top: (40/ 75) * 1rem;
+    font-size: (28 / 75) * 1rem;
+    font-weight: bold;
+    text-align: center;
+    color: #343333;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: (56/ 75) * 1rem;
+    height: (81 / 75) * 1rem;
+    background-size: (56/ 75) * 1rem (81 / 75) * 1rem;
+    outline: none;
+    text-decoration: none;
+  }
+
+  .swiper-button-prev {
+    background-image: url("../../assets/images/l_arrow.png");
+    left: 0;
+  }
+
+  .swiper-button-next {
+    background-image: url("../../assets/images/r_arrow.png");
+    right: 0;
   }
 
   .btns-wp {
     position: relative;
-    margin-top: (40 /75) * 1rem;
+    margin-top: (20 /75) * 1rem;
     text-align: center;
 
     .btn-link {
@@ -59,7 +69,7 @@
       &.write-btn {
         width: (262 / 75) * 1rem;
         height: (108 / 75) * 1rem;
-        background: url("../../assets/images/write_btn_select.png") no-repeat;
+        background: url("../../assets/images/write_btn.png") no-repeat;
         background-size: contain;
         background-position: top center;
       }
@@ -67,7 +77,7 @@
       &.borrow-btn {
         width: (250 / 75) * 1rem;
         height: (86 / 75) * 1rem;
-        background: url("../../assets/images/write_borrow_btn.png") no-repeat;
+        background: url("../../assets/images/write_borrow_btn_select.png") no-repeat;
         background-size: contain;
         background-position: top center;
       }
@@ -93,22 +103,5 @@
       outline: none;
       overflow: hidden;
     }
-  }
-
-  .tips {
-    z-index: 10;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: (180 / 75) * 1rem;
-    height: (50 / 75) * 1rem;
-    margin-top: - (25 / 75) * 1rem;
-    margin-left: - (90 / 75) * 1rem;
-    font-size: (26 / 75) * 1rem;
-    color: #fff;
-    line-height: (50 / 75) * 1rem;
-    text-align: center;
-    border-radius: (6 / 75) * 1rem;
-    background-color: rgba(0, 0, 0, 0.6);
   }
 }
