--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -4,16 +4,54 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: #1e100b;
+  //background: url("../../assets/images/shoye_bg_01.jpg") repeat-y;
 
   .home-bg {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url("../../assets/images/shouye.jpg") no-repeat;
-    background-size: contain;
-    background-position: top center;
+    background: url("../../assets/images/shouye_bg.jpg") no-repeat;
+    background-size: 100% 100%;
+    background-position: center center;
     text-align: center;
+  }
+
+  .home-title {
+    position: relative;
+    width: (654 / 75) * 1rem;
+    height: (279 /75) * 1rem;
+    margin: (45 / 75) * 1rem auto 0;
+    vertical-align: middle;
+    outline: none;
+    overflow: hidden;
+  }
+
+  .home-xinfeng {
+    position: absolute;
+    left: (70 / 75) * 1rem;
+    bottom: (212 / 75) * 1rem;
+    width: (166 / 75) * 1rem;
+    height: (182 / 75) * 1rem;
+    vertical-align: middle;
+    outline: none;
+    overflow: hidden;
+  }
+
+  .home-link {
+    position: absolute;
+    left: 0;
+    bottom: (53 / 75) * 1rem;
+    width: 100%;
+    height: (162 / 75) * 1rem;
+    text-align: center;
+
+    .home-myletter {
+      width: (360 / 75) * 1rem;
+      height: (162 / 75) * 1rem;
+      vertical-align: middle;
+      outline: none;
+      overflow: hidden;
+    }
   }
 
   .logo-img {
@@ -24,21 +62,7 @@
     overflow: hidden;
   }
 
-  .btn-myletter {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: (1000 / 75) * 1rem;
-    width: 100%;
-    height: (176 / 75) * 1rem;
-    text-decoration: none;
-    cursor: pointer;
-    background: url("../../assets/images/myletter_btn.png") no-repeat;
-    background-position: top center;
-  }
-
   .share-cont {
-    display: none;
     z-index: 999;
     position: absolute;
     left: 0;
@@ -53,5 +77,22 @@
       outline: none;
       overflow: hidden;
     }
+  }
+
+  .share-tips {
+    z-index: 10;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: (140 / 75) * 1rem;
+    height: (50 / 75) * 1rem;
+    margin-top: - (25 / 75) * 1rem;
+    margin-left: - (70 / 75) * 1rem;
+    font-size: (26 / 75) * 1rem;
+    color: #fff;
+    line-height: (50 / 75) * 1rem;
+    text-align: center;
+    border-radius: (6 / 75) * 1rem;
+    background-color: rgba(0, 0, 0, 0.6);
   }
 }
