--- a/src/views/myLoveLetter/myLoveLetter.scss
+++ b/src/views/myLoveLetter/myLoveLetter.scss
@@ -4,21 +4,16 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-color: #1e100b;
+  background-color: #c1c6cc;
 
   .myLoveLetter-cont {
     position: relative;
     width: 100%;
     height: 100%;
-    text-align: center;
-  }
-
-  .logo-img {
-    width: (144 / 75) * 1rem;
-    margin-top: (40 /75) * 1rem;
-    vertical-align: middle;
-    outline: none;
-    overflow: hidden;
+    padding-top: (140 / 75) * 1rem;
+    background: url("../../assets/images/myletter_bg.jpg") no-repeat;
+    background-size: contain;
+    background-position: top center;
   }
 
   .myLoveLetter-main {
@@ -29,24 +24,23 @@
     position: relative;
     width: (600 / 75) * 1rem;
     height: (700 / 75) * 1rem;
-    padding-top: (70 / 75) * 1rem;
-    margin: ((38 /75) * 1rem) auto 0;
-    background-color: #fff;
-    //overflow: hidden;
+    padding: (70 / 75) * 1rem (65 / 75) * 1rem (60 / 75) * 1rem (70 / 75) * 1rem;
+    margin: 0 auto;
   }
 
   .letter-total {
     margin-top: (40/ 75) * 1rem;
-    font-size: (25 / 75) * 1rem;
+    font-size: (28 / 75) * 1rem;
     font-weight: bold;
-    color: #fff;
+    text-align: center;
+    color: #343333;
   }
 
   .swiper-button-prev,
   .swiper-button-next {
-    width: (60/ 75) * 1rem;
-    height: (85 / 75) * 1rem;
-    background-size: (60/ 75) * 1rem (85 / 75) * 1rem;
+    width: (56/ 75) * 1rem;
+    height: (81 / 75) * 1rem;
+    background-size: (56/ 75) * 1rem (81 / 75) * 1rem;
     outline: none;
     text-decoration: none;
   }
@@ -61,44 +55,52 @@
     right: 0;
   }
 
-  .myLoveLetter-btns {
+  .btns-wp {
     position: relative;
-    width: (553 / 75) * 1rem;
-    height: (86 / 75) * 1rem;
-    margin: (48 / 75) * 1rem auto 0;
-    background: url("../../assets/images/watchMovie_btns.png") no-repeat;
-    background-size: contain;
-    background-position: top center;
-    text-align: left;
+    margin-top: (15 / 75) * 1rem;
+    text-align: center;
 
-    .myLoveLetter-btn-link {
+    .btn-link {
       display: inline-block;
-      float: left;
-      width: 50%;
+      width: (250 /75) * 1rem;
       height: (86 / 75) * 1rem;
+      margin: 0 (26 / 75) * 1rem;
       text-decoration: none;
       cursor: pointer;
+
+      &.return-home {
+        background: url("../../assets/images/return_home.png") no-repeat;
+        background-size: contain;
+        background-position: center center;
+      }
+
+      &.send-out {
+        background: url("../../assets/images/sendOut_btn.png") no-repeat;
+        background-size: contain;
+        background-position: center center;
+      }
     }
   }
 
   .wm {
     position: relative;
-    padding-left: (70 / 75) * 1rem;
-    font-size: (25 / 75) * 1rem;
+    font-size: (30 / 75) * 1rem;
     font-weight: 500;
     color: #0f0503;
     text-align: left;
   }
 
-  .letter-m-img {
+  .letter-m {
     position: relative;
-    height: (490 / 75) *1rem;
+    margin-top: (80 / 75) * 1rem;
+    height: (420 / 75) *1rem;
+    font-size: (27 /75) * 1rem;
+    color: #0f0503;
     overflow: hidden;
   }
 
   .u-info {
     position: relative;
-    padding-right: (67 / 75) * 1rem;
     vertical-align: middle;
     text-align: right;
 
@@ -114,21 +116,34 @@
     .u-name {
       display: inline-block;
       margin-left: (10 / 75) * 1rem;
-      font-size: (25 / 75) * 1rem;
-      font-weight: bold;
+      font-size: (30 / 75) * 1rem;
+      font-weight: 500;
       color: #0f0503;
     }
   }
 
-  .myLoveLetter-bottom {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: (750 / 75) * 1rem;
-    height: (206 / 75) * 1rem;
-    background: url("../../assets/images/movie_m.png") no-repeat;
+  .letter-text {
+    position: relative;
+    width: (499 / 75) * 1rem;
+    height: (20 / 75) * 1rem;
+    margin: (35/ 75) * 1rem auto 0;
+    background: url("../../assets/images/sendOut_text.png") no-repeat;
     background-size: contain;
     background-position: top center;
+  }
+
+  .logo-wp {
+    position: relative;
+    margin-top: (20 / 75) * 1rem;
+    text-align: center;
+
+    .logo-img {
+      width: (144 / 75) * 1rem;
+      height: (60 / 75) * 1rem;
+      vertical-align: middle;
+      outline: none;
+      overflow: hidden;
+    }
   }
 
   .keys-wp {
@@ -138,17 +153,53 @@
     top: 0;
     width: 100%;
     height: 100%;
-    color: #fff;
     background-color: rgba(0, 0, 0, 0.7);
     text-align: center;
     vertical-align: middle;
 
-    .btn-fuzhi {
-      display: block;
-      padding: (40 / 75) * 1rem;
-      margin-top: (40 / 75) * 1rem;
-      background-color: #fff;
-      color: #000;
+    .keys-main {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      background: url("../../assets/images/key_bg.png") no-repeat;
+      background-size: contain;
+      background-position: top center;
+
+      .qrcode-wp {
+        position: relative;
+        padding-top: (268 / 75) * 1rem;
+        text-align: center;
+
+        .qr-img {
+          width: (210 / 75) * 1rem;
+          height: (210 / 75) * 1rem;
+          vertical-align: middle;
+          outline: none;
+          overflow: hidden;
+        }
+      }
+
+      .keys-close {
+        display: inline-block;
+        position: absolute;
+        top: (108 / 75) * 1rem;
+        right: (55 / 75) * 1rem;
+        width: (70 / 75) * 1rem;
+        height: (70 / 75) * 1rem;
+        text-decoration: none;
+        cursor: pointer;
+      }
+
+      .btn-fuzhi {
+        display: inline-block;
+        position: absolute;
+        left: (250 / 75) * 1rem;
+        top: (809 / 75) * 1rem;
+        width: (251 / 75) * 1rem;
+        height: (88 / 75) * 1rem;
+        text-decoration: none;
+        cursor: pointer;
+      }
     }
   }
 }
