--- a/src/views/sendOut/sendOut.scss
+++ b/src/views/sendOut/sendOut.scss
@@ -1,34 +1,63 @@
 @import "base";
 
 .sendOut-wp {
+  position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 50px;
-  background: #00ccff;
-  color: #fff;
-  vertical-align: middle;
-  text-align: center;
+  background-color: #c1c6cc;
 
-  a {
-    display: inline-block;
-    width: 50%;
-    padding: 12px 10px;
-    margin: 20px auto;
-    border: 1px solid #fff;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-  }
-
-  .no-letter {
-    z-index: 99;
-    position: absolute;
-    left: 0;
-    top: 0;
+  .sendOut-main {
+    position: relative;
     width: 100%;
     height: 100%;
-    padding-top: 20px;
-    color: #fff;
-    background-color: rgba($color: #000000, $alpha: 0.8);
+    background: url("../../assets/images/sendOut_bg.jpg") no-repeat;
+    background-size: contain;
+    background-position: top center;
+  }
+
+  .sendOut-cont {
+    position: absolute;
+    left: 0;
+    top: (836 / 75) * 1rem;
+    width: 100%;
+  }
+
+  .btns-wp {
+    position: relative;
+    text-align: center;
+
+    .btn-link {
+      display: inline-block;
+      width: (250 /75) * 1rem;
+      height: (86 / 75) * 1rem;
+      margin: 0 auto (30 / 75) * 1rem;
+      text-decoration: none;
+      cursor: pointer;
+
+      &.write-again {
+        background: url("../../assets/images/write-again.png") no-repeat;
+        background-size: contain;
+        background-position: center center;
+      }
+
+      &.return-home {
+        background: url("../../assets/images/return_home.png") no-repeat;
+        background-size: contain;
+        background-position: center center;
+      }
+    }
+  }
+
+  .logo-wp {
+    position: relative;
+    text-align: center;
+
+    .logo-img {
+      width: (144 / 75) * 1rem;
+      height: (60 / 75) * 1rem;
+      vertical-align: middle;
+      outline: none;
+      overflow: hidden;
+    }
   }
 }
