--- a/src/views/borrow/borrow.scss
+++ b/src/views/borrow/borrow.scss
@@ -1,5 +1,15 @@
 @import "base";
 
+@font-face {
+  font-family: HandBook;
+  src: url("../../assets/front/handbook.ttf");
+}
+
+@font-face {
+  font-family: NotoSerifCJKsc-SemiBold;
+  src: url("../../assets/front/NotoSerifCJKsc-SemiBold.otf");
+}
+
 .borrow-wp {
   position: relative;
   width: 100%;
@@ -33,11 +43,32 @@
     position: relative;
     width: (544 / 75) * 1rem;
     height: (700 / 75) * 1rem;
-    padding: (70 / 75) * 1rem (65 / 75) * 1rem (60 / 75) * 1rem (70 / 75) * 1rem;
+    // padding: (70 / 75) * 1rem (65 / 75) * 1rem (60 / 75) * 1rem (70 / 75) * 1rem;
     margin: 0 auto;
     background: url("../../assets/images/write_xinzhi.png") no-repeat;
     background-size: contain;
     background-position: top center;
+    color: #0f0503;
+  }
+
+  .borrow-h {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: (595 / 75) * 1rem;
+    font-family: NotoSerifCJKsc-SemiBold;
+    font-size: (26 / 75) * 1rem;
+    line-height: (40 / 75) * 1rem;
+    letter-spacing: (2 / 75) * 1rem;
+  }
+
+  .borrow-d {
+    padding-right: (35 / 75) * 1rem;
+    margin-top: (25 / 75) * 1rem;
+    text-align: right;
+    font-family: NotoSerifCJKsc-SemiBold;
+    font-size: (26 / 75) * 1rem;
   }
 
   .borrow-total {
@@ -115,5 +146,22 @@
       outline: none;
       overflow: hidden;
     }
+  }
+
+  .tips {
+    z-index: 10;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: (180 / 75) * 1rem;
+    height: (50 / 75) * 1rem;
+    margin-top: - (25 / 75) * 1rem;
+    margin-left: - (90 / 75) * 1rem;
+    font-size: (26 / 75) * 1rem;
+    color: #fff;
+    line-height: (50 / 75) * 1rem;
+    text-align: center;
+    border-radius: (6 / 75) * 1rem;
+    background-color: rgba(0, 0, 0, 0.6);
   }
 }
