--- a/src/views/watchMovie/watchMovie.scss
+++ b/src/views/watchMovie/watchMovie.scss
@@ -1,5 +1,15 @@
 @import "base";
 
+@font-face {
+  font-family: HandBook;
+  src: url("../../assets/front/handbook.ttf");
+}
+
+@font-face {
+  font-family: NotoSerifCJKsc-SemiBold;
+  src: url("../../assets/front/NotoSerifCJKsc-SemiBold.otf");
+}
+
 .watchMovie-wp {
   position: relative;
   width: 100%;
@@ -34,7 +44,7 @@
     position: relative;
     width: (544 / 75) * 1rem;
     height: (700 / 75) * 1rem;
-    padding: (70 / 75) * 1rem (65 / 75) * 1rem (60 / 75) * 1rem (70 / 75) * 1rem;
+    padding: (60 / 75) * 1rem 0 (40 / 75) * 1rem;
     margin: 0 auto;
     background: url("../../assets/images/myletter_xinzhi.png") no-repeat;
     background-size: contain;
@@ -78,23 +88,33 @@
 
   .wm {
     position: relative;
-    font-size: (30 / 75) * 1rem;
+    padding-left: (40 / 75) * 1rem;
+    font-size: (28 / 75) * 1rem;
+    font-family: NotoSerifCJKsc-SemiBold;
     font-weight: 500;
     color: #0f0503;
+    letter-spacing: (2 / 75) * 1rem;
     text-align: left;
   }
 
   .letter-m {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    margin-top: (80 / 75) * 1rem;
-    height: (420 / 75) *1rem;
-    font-size: (27 /75) * 1rem;
+    width: 100%;
+    height: (480 / 75) *1rem;
+    font-family: NotoSerifCJKsc-SemiBold;
+    font-size: (26 /75) * 1rem;
+    letter-spacing: (2 / 75) * 1rem;
     color: #0f0503;
     overflow: hidden;
   }
 
   .u-info {
     position: relative;
+    padding-right: (30 / 75) * 1rem;
+    margin-top: ( 20 / 75) * 1rem;
     vertical-align: middle;
     text-align: right;
 
@@ -110,8 +130,10 @@
     .u-name {
       display: inline-block;
       margin-left: (10 / 75) * 1rem;
-      font-size: (30 / 75) * 1rem;
+      font-size: (28 / 75) * 1rem;
+      font-family: NotoSerifCJKsc-SemiBold;
       font-weight: 500;
+      letter-spacing: (2 / 75) * 1rem;
       color: #0f0503;
     }
   }
