--- a/src/views/layout/layout.scss
+++ b/src/views/layout/layout.scss
@@ -44,3 +44,25 @@
     }
   }
 }
+
+.brand-egg {
+  z-index: 99;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+
+  .brand-egg-cont {
+    position: relative;
+    // width: (520 / 75) *1rem;
+    // height: (559 / 75) * 1rem;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    background: url("../../assets/images/brand_egg.png") no-repeat;
+    background-size: (520 / 75) *1rem (559 / 75) * 1rem;
+    background-position: center center;
+  }
+}
