--- a/src/views/myLoveLetter/myLoveLetter.scss
+++ b/src/views/myLoveLetter/myLoveLetter.scss
@@ -19,7 +19,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-top: (106 / 75) * 1rem;
+    padding-top: (105 / 75) * 1rem;
     background: url("../../assets/images/myletter_bottom_bg.png") no-repeat;
     background-size: contain;
     background-position: bottom center;
@@ -27,21 +27,21 @@
 
   .myLoveLetter-main {
     position: relative;
-  }
-
-  .swiper-container {
-    min-height: (780 / 75) * 1rem;
+    min-height: (782 / 75) * 1rem;
   }
 
   .letter-info {
     position: relative;
-    width: (544 / 75) * 1rem;
+    width: (545 / 75) * 1rem;
     height: (700 / 75) * 1rem;
-    padding: (70 / 75) * 1rem (65 / 75) * 1rem (60 / 75) * 1rem (70 / 75) * 1rem;
+    padding: (40 / 75) * 1rem;
     margin: 0 auto;
     background: url("../../assets/images/myletter_xinzhi.png") no-repeat;
     background-size: contain;
     background-position: top center;
+    font-family: NotoSerifCJKsc-SemiBold;
+    letter-spacing: (2 / 75) * 1rem;
+    color: #0f0503;
   }
 
   .letter-total {
@@ -100,23 +100,28 @@
 
   .wm {
     position: relative;
-    font-size: (30 / 75) * 1rem;
+    font-size: (28 / 75) * 1rem;
     font-weight: 500;
-    color: #0f0503;
     text-align: left;
   }
 
   .letter-m {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    margin-top: (80 / 75) * 1rem;
-    height: (420 / 75) *1rem;
-    font-size: (27 /75) * 1rem;
-    color: #0f0503;
+    width: 100%;
+    height: (520 / 75) *1rem;
+    font-size: (26 /75) * 1rem;
+    line-height: (40 / 75) * 1rem;
     overflow: hidden;
   }
 
   .u-info {
     position: relative;
+    height: (70 / 75) * 1rem;
+    margin-top: (15 / 75) * 1rem;
+    line-height: (70 / 75) * 1rem;
     vertical-align: middle;
     text-align: right;
 
@@ -132,9 +137,8 @@
     .u-name {
       display: inline-block;
       margin-left: (10 / 75) * 1rem;
-      font-size: (30 / 75) * 1rem;
+      font-size: (28 / 75) * 1rem;
       font-weight: 500;
-      color: #0f0503;
     }
   }
 
