修改借情书样式、预加载字体（测试）、无彩蛋、进入自己分享链接跳转首页

--- a/src/views/write/write.scss
+++ b/src/views/write/write.scss
@@ -1,5 +1,8 @@
 @import "base";
-
+@font-face {
+  font-family: NotoSerifCJKsc-SemiBold;
+  src: url("../../assets/front/NotoSerifCJKsc-SemiBold.otf");
+}
 .write-wp {
   position: relative;
   width: 100%;
@@ -54,12 +57,13 @@
       vertical-align: middle;
       border: none;
       background: transparent;
+      font-family: NotoSerifCJKsc-SemiBold;
     }
   }
 
   .btns-wp {
     position: relative;
-    margin-top: (40 /75) * 1rem;
+    margin-top: ((40 + 50) /75) * 1rem;
     text-align: center;
 
     .btn-link {
