--- a/src/views/loading/loading.scss
+++ b/src/views/loading/loading.scss
@@ -1,5 +1,8 @@
 @import "base";
-
+@font-face {
+  font-family: NotoSerifCJKsc-SemiBold-compress;
+  src: url("../../assets/front/SourceHanSerifCN-Bold-compress.ttf");
+}
 .loading-wp {
   position: relative;
   width: 100%;
@@ -53,7 +56,7 @@
     font-weight: 500;
     text-align: center;
     vertical-align: bottom;
-
+    font-family: NotoSerifCJKsc-SemiBold-compress;
     span {
       font-size: (40 / 75) * 1rem;
     }
