--- a/src/views/myLoveLetter/myLoveLetter.scss
+++ b/src/views/myLoveLetter/myLoveLetter.scss
@@ -27,16 +27,16 @@
 
   .myLoveLetter-main {
     position: relative;
-    min-height: (782 / 75) * 1rem;
+    min-height: (789 / 75) * 1rem;
   }
 
   .letter-info {
     position: relative;
-    width: (545 / 75) * 1rem;
-    height: (700 / 75) * 1rem;
-    padding: (40 / 75) * 1rem;
+    width: (620 / 75) * 1rem;
+    height: (789 / 75) * 1rem;
+    padding-top: (35/ 75) * 1rem;
     margin: 0 auto;
-    background: url("../../assets/images/myletter_xinzhi.png") no-repeat;
+    background: url("../../assets/images/write_xinzhi.png") no-repeat;
     background-size: contain;
     background-position: top center;
     font-family: NotoSerifCJKsc-SemiBold;
@@ -44,58 +44,12 @@
     color: #0f0503;
   }
 
-  .letter-total {
-    margin-top: (40/ 75) * 1rem;
-    font-size: (28 / 75) * 1rem;
-    font-weight: bold;
-    text-align: center;
-    color: #343333;
-  }
-
-  .swiper-button-prev,
-  .swiper-button-next {
-    width: (70 / 75) * 1rem;
-    height: (85 / 75) * 1rem;
-    background-size: (70/ 75) * 1rem (85 / 75) * 1rem;
-    outline: none;
-    text-decoration: none;
-  }
-
-  .swiper-button-prev {
-    background-image: url("../../assets/images/l_arrow.png");
-    left: 0;
-  }
-
-  .swiper-button-next {
-    background-image: url("../../assets/images/r_arrow.png");
-    right: 0;
-  }
-
-  .btns-wp {
+  .letter-info-main {
     position: relative;
-    margin-top: (15 / 75) * 1rem;
-    text-align: center;
-
-    .btn-link {
-      display: inline-block;
-      width: (250 /75) * 1rem;
-      height: (86 / 75) * 1rem;
-      margin: 0 (26 / 75) * 1rem;
-      text-decoration: none;
-      cursor: pointer;
-
-      &.return-home {
-        background: url("../../assets/images/return_home.png") no-repeat;
-        background-size: contain;
-        background-position: center center;
-      }
-
-      &.send-out {
-        background: url("../../assets/images/sendOut_btn.png") no-repeat;
-        background-size: contain;
-        background-position: center center;
-      }
-    }
+    width: (548 / 75) * 1rem;
+    height: (700 / 75) * 1rem;
+    padding: (40 / 75) * 1rem;
+    margin: 0 auto;
   }
 
   .wm {
@@ -139,6 +93,64 @@
       margin-left: (10 / 75) * 1rem;
       font-size: (28 / 75) * 1rem;
       font-weight: 500;
+    }
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: (70 / 75) * 1rem;
+    height: (85 / 75) * 1rem;
+    background-size: (70/ 75) * 1rem (85 / 75) * 1rem;
+    outline: none;
+    text-decoration: none;
+  }
+
+  .swiper-button-prev {
+    background-image: url("../../assets/images/l_arrow.png");
+    left: 0;
+  }
+
+  .swiper-button-next {
+    background-image: url("../../assets/images/r_arrow.png");
+    right: 0;
+  }
+
+  .letter-total {
+    z-index: 8;
+    position: absolute;
+    left: 0;
+    top: -(40 / 75) * 1rem;
+    width: 100%;
+    font-size: (28 / 75) * 1rem;
+    font-weight: bold;
+    text-align: center;
+    color: #343333;
+  }
+
+  .btns-wp {
+    position: relative;
+    margin-top: (20 / 75) * 1rem;
+    text-align: center;
+
+    .btn-link {
+      display: inline-block;
+      width: (250 /75) * 1rem;
+      height: (86 / 75) * 1rem;
+      margin: 0 (26 / 75) * 1rem;
+      text-decoration: none;
+      cursor: pointer;
+
+      &.return-home {
+        background: url("../../assets/images/return_home.png") no-repeat;
+        background-size: contain;
+        background-position: center center;
+      }
+
+      &.send-out {
+        background: url("../../assets/images/sendOut_btn.png") no-repeat;
+        background-size: contain;
+        background-position: center center;
+      }
     }
   }
 
