--- a/src/views/write/write.scss
+++ b/src/views/write/write.scss
@@ -1,8 +1,10 @@
 @import "base";
+
 @font-face {
   font-family: NotoSerifCJKsc-SemiBold;
   src: url("../../assets/front/NotoSerifCJKsc-SemiBold.otf");
 }
+
 .write-wp {
   position: relative;
   width: 100%;
@@ -22,7 +24,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-top: (106 / 75) * 1rem;
+    padding-top: (70 / 75) * 1rem;
     background: url("../../assets/images/write_bottom_bg.png") no-repeat;
     background-size: contain;
     background-position: bottom center;
@@ -30,6 +32,13 @@
 
   .write-main {
     position: relative;
+    width: (620 / 75) * 1rem;
+    height: (789 / 75) * 1rem;
+    padding-top: (35/ 75) * 1rem;
+    margin: 0 auto;
+    background: url("../../assets/images/write_xinzhi.png") no-repeat;
+    background-size: contain;
+    background-position: top center;
   }
 
   textarea::-webkit-input-placeholder {
@@ -41,16 +50,13 @@
 
   .write-info {
     position: relative;
-    width: (545 / 75) * 1rem;
+    width: (548 / 75) * 1rem;
     height: (700 / 75) * 1rem;
     margin: 0 auto;
-    background: url("../../assets/images/write_xinzhi.png") no-repeat;
-    background-size: contain;
-    background-position: top center;
 
     .write-textarea {
       display: table-cell;
-      width: (545 / 75) * 1rem;
+      width: (548 / 75) * 1rem;
       height: (700 / 75) * 1rem;
       padding: (20 / 75) * 1rem (30 / 75)*1rem;
       font-size: (30 /75) * 1rem;
@@ -63,7 +69,7 @@
 
   .btns-wp {
     position: relative;
-    margin-top: ((40 + 50) /75) * 1rem;
+    margin-top: (5 /75) * 1rem;
     text-align: center;
 
     .btn-link {
@@ -73,16 +79,16 @@
       cursor: pointer;
 
       &.write-btn {
-        width: (262 / 75) * 1rem;
-        height: (108 / 75) * 1rem;
+        width: (275 / 75) * 1rem;
+        height: (111 / 75) * 1rem;
         background: url("../../assets/images/write_btn_select.png") no-repeat;
         background-size: contain;
         background-position: top center;
       }
 
       &.borrow-btn {
-        width: (250 / 75) * 1rem;
-        height: (86 / 75) * 1rem;
+        width: (275 / 75) * 1rem;
+        height: (111 / 75) * 1rem;
         background: url("../../assets/images/write_borrow_btn.png") no-repeat;
         background-size: contain;
         background-position: top center;
