--- a/src/views/myLoveLetter/myLoveLetter.scss
+++ b/src/views/myLoveLetter/myLoveLetter.scss
@@ -39,7 +39,7 @@
     background: url("../../assets/images/myletter_xinzhi.png") no-repeat;
     background-size: contain;
     background-position: top center;
-    font-family: NotoSerifCJKsc-SemiBold;
+    font-family: SourceHanSerifCN-Bold-compress2;
     letter-spacing: (2 / 75) * 1rem;
     color: #0f0503;
   }
@@ -244,7 +244,7 @@
   }
 
   .share-tips {
-    z-index: 10;
+    z-index: 999;
     position: absolute;
     left: 50%;
     top: 50%;
