--- a/src/views/write/write.scss
+++ b/src/views/write/write.scss
@@ -1,14 +1,19 @@
 @import "base";
 @font-face {
-  font-family: NotoSerifCJKsc-SemiBold;
-  src: url("../../assets/front/NotoSerifCJKsc-SemiBold.otf");
+  font-family: HandBook;
+  src: url("../../assets/front/handbook.ttf");
 }
 .write-wp {
   position: relative;
   width: 100%;
   height: 100%;
   background-color: #c1c6cc;
-
+  .myLoveLetter-main{
+     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+  }
   .write-cont {
     position: relative;
     width: 100%;
@@ -57,13 +62,13 @@
       vertical-align: middle;
       border: none;
       background: transparent;
-      font-family: NotoSerifCJKsc-SemiBold;
+      font-family: HandBook;
     }
   }
 
   .btns-wp {
     position: relative;
-    margin-top: ((40 + 50) /75) * 1rem;
+    margin-top: ((20) /75) * 1rem;
     text-align: center;
 
     .btn-link {
