--- a/src/views/borrow/borrow.scss
+++ b/src/views/borrow/borrow.scss
@@ -1,10 +1,10 @@
 @import "base";
 
 
-@font-face {
-  font-family: SourceHanSerifCN-Bold-compress2;
-  src: url("../../assets/front/SourceHanSerifCN-Bold-compress2.ttf");
-}
+// @font-face {
+//   font-family: SourceHanSerifCN-Bold-compress2;
+//   src: url("../../assets/front/SourceHanSerifCN-Bold-compress2.ttf");
+// }
 .borrow-wp {
   position: relative;
   width: 100%;
@@ -48,7 +48,7 @@
     background: url("../../assets/images/write_xinzhi2.png") no-repeat;
     background-size: contain;
     background-position: top center;
-    font-family: NotoSerifCJKsc-SemiBold;
+    // font-family: NotoSerifCJKsc-SemiBold;
     letter-spacing: (2 / 75) * 1rem;
     color: #0f0503;
   }
@@ -82,6 +82,7 @@
     margin-top: (15 / 75) * 1rem;
     text-align: right;
     font-size: (26 / 75) * 1rem;
+    color: #4a4a4a;
   }
 
   .swiper-button-prev,
