--- a/src/views/loading/loading.scss
+++ b/src/views/loading/loading.scss
@@ -1,8 +1,8 @@
 @import "base";
-@font-face {
-  font-family: SourceHanSerifCN-Bold-compress2;
-  src: url("../../assets/front/SourceHanSerifCN-Bold-compress2.ttf");
-}
+// @font-face {
+//   font-family: SourceHanSerifCN-Bold-compress2;
+//   src: url("../../assets/front/SourceHanSerifCN-Bold-compress2.ttf");
+// }
 .loading-wp {
   position: relative;
   width: 100%;
@@ -56,7 +56,7 @@
     font-weight: 500;
     text-align: center;
     vertical-align: bottom;
-    font-family: SourceHanSerifCN-Bold-compress2;
+    // font-family: SourceHanSerifCN-Bold-compress2;
     span {
       font-size: (40 / 75) * 1rem;
     }
