--- a/src/views/watchMovie/watchMovie.scss
+++ b/src/views/watchMovie/watchMovie.scss
@@ -1,14 +1,14 @@
 @import "base";
 
-@font-face {
-  font-family: HandBook;
-  src: url("../../assets/front/handbook.ttf");
-}
+// @font-face {
+//   font-family: HandBook;
+//   src: url("../../assets/front/handbook.ttf");
+// }
 
-@font-face {
-  font-family: SourceHanSerifCN-Bold-compress2;
-  src: url("../../assets/front/SourceHanSerifCN-Bold-compress2.ttf");
-}
+// @font-face {
+//   font-family: SourceHanSerifCN-Bold-compress2;
+//   src: url("../../assets/front/SourceHanSerifCN-Bold-compress2.ttf");
+// }
 
 .watchMovie-wp {
   position: relative;
@@ -90,7 +90,7 @@
     position: relative;
     // padding-left: (40 / 75) * 1rem;
     font-size: (28 / 75) * 1rem;
-    font-family: SourceHanSerifCN-Bold-compress2;
+    // font-family: SourceHanSerifCN-Bold-compress2;
     font-weight: 500;
     color: #0f0503;
     letter-spacing: (2 / 75) * 1rem;
@@ -104,7 +104,7 @@
     position: relative;
     width: 100%;
     height: (480 / 75) *1rem;
-    font-family: SourceHanSerifCN-Bold-compress2;
+    // font-family: SourceHanSerifCN-Bold-compress2;
     font-size: (26 /75) * 1rem;
     letter-spacing: (2 / 75) * 1rem;
     color: #0f0503;
@@ -131,7 +131,7 @@
       display: inline-block;
       margin-left: (10 / 75) * 1rem;
       font-size: (28 / 75) * 1rem;
-      font-family: SourceHanSerifCN-Bold-compress2;
+      // font-family: SourceHanSerifCN-Bold-compress2;
       font-weight: 500;
       letter-spacing: (2 / 75) * 1rem;
       color: #0f0503;
