--- a/src/views/layout/layout.scss
+++ b/src/views/layout/layout.scss
@@ -61,7 +61,7 @@
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    background: url("../../assets/images/brand_egg.gif") no-repeat;
+    background: url("../../assets/images/brand_egg.png") no-repeat;
     background-size: (520 / 75) *1rem (559 / 75) * 1rem;
     background-position: center center;
   }
