--- a/src/views/myLoveLetter/myLoveLetter.scss
+++ b/src/views/myLoveLetter/myLoveLetter.scss
@@ -177,6 +177,7 @@
     .logo-img {
       width: (144 / 75) * 1rem;
       height: (60 / 75) * 1rem;
+      margin-bottom: (20 / 75) * 1rem;
       vertical-align: middle;
       outline: none;
       overflow: hidden;
