--- a/src/views/write/write.scss
+++ b/src/views/write/write.scss
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   background-color: #c1c6cc;
+  
   .myLoveLetter-main{
      display: flex;
     flex-direction: column;
@@ -120,6 +121,7 @@
     .logo-img {
       width: (144 / 75) * 1rem;
       height: (60 / 75) * 1rem;
+      margin-bottom: (20 / 75) * 1rem;
       vertical-align: middle;
       outline: none;
       overflow: hidden;
