--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -9,7 +9,29 @@
   background: url("../../assets/images/shouye_bg_01.png") no-repeat;
   background-size: 100% 100%;
   background-position: top center;
-
+  .rule{
+    position: absolute;
+    top: ( 33 / 75 ) * 1rem;
+    left: ( 30 / 75 ) * 1rem;
+    width: ( 70 / 75 ) * 1rem;
+    height: ( 70 / 75 ) * 1rem;
+    background: url("../../assets/images/icon-rule.png") no-repeat;
+    background-size: 100%;
+    z-index: 8;
+  }
+  .rule-detial{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.8);
+    background-position: center;
+    background-size: 80% auto;
+    background-repeat: no-repeat;
+    background-image: url(../../assets/images/bg-rule.png);
+  }
   .home-bg {
     position: relative;
     width: 100%;
@@ -18,16 +40,20 @@
     background-size: contain;
     background-position: top center;
     text-align: center;
+    padding-top: (45 / 75) * 1rem;
   }
 
   .home-title {
     position: relative;
     width: (654 / 75) * 1rem;
     height: (279 /75) * 1rem;
-    margin: (45 / 75) * 1rem auto 0;
+    margin: 0 auto 0;
     vertical-align: middle;
     outline: none;
     overflow: hidden;
+    background-image: url(../../assets/images/shouye_title.png);
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 
   .home-xinfeng {
@@ -39,6 +65,9 @@
     vertical-align: middle;
     outline: none;
     overflow: hidden;
+    background-image: url(../../assets/images/shouye_xinfeng2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 
   .home-link {
