--- a/src/views/watchMovie/watchMovie.scss
+++ b/src/views/watchMovie/watchMovie.scss
@@ -257,6 +257,8 @@
         font-weight: bold;
         color: #fff;
         text-align: center;
+        width: 100%;
+        letter-spacing: 1px;
       }
 
       .ticket-close {
